# opengl-tutorial

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: dependencies.cmake  package.cmake  utilities.cmake
shaders/: colored-triangle-calc.frag  colored-triangle.frag  colored-triangle.vert  fragment.glsl  manualperspective.vert  matrixperspective-vec3offset.vert  matrixperspective.vert  modeltoclip.vert  positionoffset-calc.vert  positionoffset.vert  vertex.glsl
shaders/illumination/: basiclighting.vert  diramb_orennayar_pcn.vert  diramb_orennayar_pn.vert
shaders/illumination/fragment/: FragLightAtten.frag  diffuse_lambert.frag  diffuse_oren-nayar-fujii.frag  diffuse_oren-nayar.frag  posfragmentlighting_pcn.vert  posfragmentlighting_pn.vert  posvertexlighting_pcn.vert  posvertexlighting_pn.vert
shaders/illumination/specular/: PhongLighting.frag
shaders/world/: PosColorWorldTransform_modelToCam.vert  PosOnlyWorldTransform_modelToCam.vert
src/: CMakeLists.txt
src/glsdk/: CMakeLists.txt
src/glsdk/include/glutil/: MatrixStack.h
src/glsdk/source/: MatrixStack.cpp  MousePoles.cpp
src/renderer/: primitives.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  transform.cpp  transform.hpp  util.cpp  util.hpp
src/system/: log.cpp  log.hpp  main.cpp  mainloop.cpp  mainloop.hpp  system.cpp  system.hpp  sysutils.cpp  sysutils.hpp  window.hpp
src/system/framework/: MousePole.h  Timer.cpp  Timer.h
src/system/glfw/: glfwwindow.cpp  glfwwindow.hpp  windowglfw.cpp  windowglfw.hpp
src/tutorial/: basevertex.cpp  basevertex.hpp  depthbuffering.cpp  depthbuffering.hpp  depthclamping.cpp  depthclamping.hpp  indexeddrawing.cpp  indexeddrawing.hpp  manualperspective.cpp  manualperspective.hpp  matrixperspective.cpp  matrixperspective.hpp  movingtriangle.cpp  movingtriangle.hpp  movingtriangleshader.cpp  movingtriangleshader.hpp  orthographicprism.cpp  orthographicprism.hpp  rotatingtriangle.cpp  rotatingtriangle.hpp  tutorial.cpp  tutorial.hpp
src/tutorial/illumination/: ambientlighting.cpp  ambientlighting.hpp  basiclighting.cpp  basiclighting.hpp  blinnphonglighting.cpp  blinnphonglighting.hpp  fragmentattenuation.cpp  fragmentattenuation.hpp  fragmentpointlighting.cpp  fragmentpointlighting.hpp  gaussianlighting.cpp  gaussianlighting.hpp  orennayar.cpp  orennayar.hpp  phonglighting.cpp  phonglighting.hpp  scalelighting.cpp  scalelighting.hpp  vertexpointlighting.cpp  vertexpointlighting.hpp
src/tutorial/orientation/: camerarelative.cpp  camerarelative.hpp  gimballock.cpp  gimballock.hpp  interpolation.cpp  interpolation.hpp  quaternionypr.cpp  quaternionypr.hpp
src/tutorial/positioning/: hierarchy.cpp  hierarchy.hpp  matrixstack.hpp  node.cpp  node.hpp  nodehierarchy.cpp  nodehierarchy.hpp  translation.cpp  translation.hpp
src/tutorial/primitives/: indexedwedges.hpp  pointyshape.hpp  rectangle.hpp
src/tutorial/world/: forest.hpp  worldscene.cpp  worldscene.hpp  worldsceneobjtocam.cpp  worldsceneobjtocam.hpp  worldsceneubo.cpp  worldsceneubo.hpp
src/tutorial_framework/: CMakeLists.txt  Mesh.cpp  Mesh.h  rapidxml_helpers.h
